# postgres_example

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml  sql_translate.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_create_university_schema.py  002_seed_university_data.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: advisor.py  classroom.py  course.py  department.py  instructor.py  prereq.py  section.py  student.py  takes.py  teaches.py  time_slot.py
database/sql/: DDL.sql  DML.sql  examples.sql
tests/: conftest.py  test_advisor.py  test_classroom.py  test_course.py  test_department.py  test_instructor.py  test_prereq.py  test_section.py  test_student.py  test_takes.py  test_teaches.py  test_time_slot.py
